# aisc-neuron-mapping

./: cluster_neurons.py  emotions_DL .py  emotions_DL_last_token.py  image_model_test.py  pyproject.toml  read_deleted_neurons.py  recipe_label.py  test.py  Éloïse_results.txt
data/: README.md
