[tool.poetry]
name = "aisc-neuron-mapping"
version = "0.1.0"
description = ""
authors = ["TetraspaceW <holomanga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.3"
taker = "^0.9.8"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
